// Vitest Snapshot v1

exports[`meta() snapshots > HTML is consistent 1`] = `
"<div class=\\"markdown-body\\"><h1>Metadata</h1>
<blockquote>
<p>{{ byline }}</p>
</blockquote>
<p>This is a markdown file intended for testing meta data.</p>
<p><img src=\\"{{image}}\\" alt=\\"image\\"/>
<img src=\\"{{ image }}\\"/></p>
</div><style type=\\"text/css\\">
:root {
    --md-text-color: #111827;
    --md-code-background: rgba(27,31,35,.05);
    --code-font: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace;
  }
html.dark {
    --md-text-color: #e5e7eb;
    --md-code-background: rgba(229, 231, 235, 0.65);
  }


  .markdown-body {
    color: var(--md-text-color);
  }


  .markdown-body code {
    font-size: 85%;
    padding: 0.2em 0.3em;
    margin-left: 0.1rem;
    margin-right: 0.1rem;
    background-color: var(--md-code-background);
    border-radius: 3px;
    font-family: var(--code-font);
    color: #333;
    white-space: pre;
  }


  .markdown-body blockquote {
    margin-top: 0;
    margin-bottom: 0.25rem;
    padding: 0 1em;
    color: #6a73737d;
    border-left: 0.25rem solid #dfe2e5;
  }


  .markdown-body a {
    cursor: pointer;
  }


  .markdown-body a:hover {
    background-color: rgba(0,0,0,.5);
    font-weight: 700;
    border-radius: 0.2rem 0.4rem;
  }
</style>"
`;

exports[`meta() snapshots > custom blocks are consistent 1`] = `
[
  "<style type=\\"text/css\\">
:root {
    --md-text-color: #111827;
    --md-code-background: rgba(27,31,35,.05);
    --code-font: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace;
  }
html.dark {
    --md-text-color: #e5e7eb;
    --md-code-background: rgba(229, 231, 235, 0.65);
  }


  .markdown-body {
    color: var(--md-text-color);
  }


  .markdown-body code {
    font-size: 85%;
    padding: 0.2em 0.3em;
    margin-left: 0.1rem;
    margin-right: 0.1rem;
    background-color: var(--md-code-background);
    border-radius: 3px;
    font-family: var(--code-font);
    color: #333;
    white-space: pre;
  }


  .markdown-body blockquote {
    margin-top: 0;
    margin-bottom: 0.25rem;
    padding: 0 1em;
    color: #6a73737d;
    border-left: 0.25rem solid #dfe2e5;
  }


  .markdown-body a {
    cursor: pointer;
  }


  .markdown-body a:hover {
    background-color: rgba(0,0,0,.5);
    font-weight: 700;
    border-radius: 0.2rem 0.4rem;
  }
</style>",
  "<route lang=\\"json\\">{}</route>
",
]
`;

exports[`meta() snapshots > frontmatter is consistent 1`] = `
{
  "byline": "who loves ya baby?",
  "excerpt": undefined,
  "image": "facebook.png",
  "layout": "yowza",
  "name": "My Name",
  "title": "Metadata Rules",
}
`;

exports[`meta() snapshots > script blocks are consistent 1`] = `
"
<script setup>
  defineExpose({ frontmatter: {\\"title\\":\\"Metadata Rules\\",\\"name\\":\\"My Name\\",\\"byline\\":\\"who loves ya baby?\\",\\"layout\\":\\"yowza\\",\\"image\\":\\"facebook.png\\"} })
  
 const title = \\"Metadata Rules\\"
 const name = \\"My Name\\"
 const byline = \\"who loves ya baby?\\"
 const layout = \\"yowza\\"
 const image = \\"facebook.png\\"
 const excerpt = undefined
</script>

<script>
  /** frontmatter meta-data for MD page **/
  export const frontmatter = {\\"title\\":\\"Metadata Rules\\",\\"name\\":\\"My Name\\",\\"byline\\":\\"who loves ya baby?\\",\\"layout\\":\\"yowza\\",\\"image\\":\\"facebook.png\\"}
</script>"
`;
